; ModuleID = '/home/carl/AnghaBench/git/extr_mailmap.c_clear_mailmap.c'
source_filename = "/home/carl/AnghaBench/git/extr_mailmap.c_clear_mailmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32, i32 }

@.str = private unnamed_addr constant [33 x i8] c"mailmap: clearing %d entries...\0A\00", align 1
@free_mailmap_entry = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"mailmap: cleared\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_mailmap(%struct.string_list* %0) #0 {
  %2 = alloca %struct.string_list*, align 8
  store %struct.string_list* %0, %struct.string_list** %2, align 8
  %3 = load %struct.string_list*, %struct.string_list** %2, align 8
  %4 = getelementptr inbounds %struct.string_list, %struct.string_list* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 (i8*, ...) @debug_mm(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load %struct.string_list*, %struct.string_list** %2, align 8
  %8 = getelementptr inbounds %struct.string_list, %struct.string_list* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load %struct.string_list*, %struct.string_list** %2, align 8
  %10 = load i32, i32* @free_mailmap_entry, align 4
  %11 = call i32 @string_list_clear_func(%struct.string_list* %9, i32 %10)
  %12 = call i32 (i8*, ...) @debug_mm(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @debug_mm(i8*, ...) #1

declare dso_local i32 @string_list_clear_func(%struct.string_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
